# cement-consumption-forecast-GT

./: .gitignore  README.md  data_sources.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: ADVANCED_FORECASTING_WORKFLOW.md  BASELINE_REPORTING_WORKFLOW.md  DATA_SOURCES.md  FORECAST_DIAGNOSTICS_WORKFLOW.md  IMAE_SOURCE.md  MONTHLY_PANEL_CONTRACT.md  NEXT_STEPS.md
notebooks/: README.md
reports/: README.md  advanced_model_comparison.csv  advanced_model_predictions.csv  advanced_model_results.md  data_quality_report.md  forecast_diagnostics_report.md  imae_baseline_comparison.csv  imae_baseline_predictions.csv  imae_baseline_results.md  ml_holdout_predictions.csv  ml_model_comparison.csv  monthly_panel_report.md  raw_data_inventory.md
scripts/: build_modeling_dataset.py  build_strict_monthly_panel.py  check_imae_coverage.py  download_banguat_imae.py  download_data.py  make_baseline_report.py  make_data_quality_report.py  make_features.py  make_forecast_diagnostics.py  make_sample_dataset.py  profile_raw_data.py  train_advanced_models.py  train_baseline.py  train_ml_models.py  validate_monthly_panel.py
src/cement_forecast/: __init__.py  advanced_models.py  cleaning.py  config.py  data_catalog.py  dataset.py  diagnostics.py  download.py  evaluation.py  features.py  models.py  (+4 more)
tests/: test_advanced_models.py  test_baseline_report.py  test_cleaning.py  test_dataset.py  test_diagnostics.py  test_evaluation.py  test_features.py  test_ml_models.py  test_models.py  test_monthly_panel.py  test_official_parsers.py  test_parsers_common.py  test_targets.py
(+4 files in other folders)
